--- a/project/src/pages/components/_header.html
+++ b/project/src/pages/components/_header.html
@@ -1,5 +1,63 @@
 <header>
-    <div class="container">
-        
-    </div>
+        <nav class="navbar p-0 navbar-expand-lg">
+                
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse flex-column" id="navbarSupportedContent">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-2 col-12 col-md-6">
+                                <a href="/">
+                                    <img src="./../img/header-logo.svg" alt="" class="img-fluid">
+                                </a>
+                            </div>
+                            <div class="col-lg-5 col-12 col-md-6 offset-lg-1 align-self-center">
+                                <div class="row phones justify-content-center">
+                                    <div class="col-6 w-fit-content"><a href="tel:+380673120978">+38 (067) 312 09 78</a></div>
+                                    <div class="col-6 w-fit-content"><a href="tel:+380504827172">+38 (050) 482 71 72</a></div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-12 col-md-12 d-flex justify-content-lg-center ">
+                                <div class="row h-100 align-items-center socials align-self-center">
+                                    <a href="#" class="social col-4 h-100 align-items-center d-flex p-0 px-2 w-fit-content"><i class="far fa-envelope"></i></a>
+                                    <a href="#" class="social col-4 h-100 align-items-center d-flex p-0 px-2 w-fit-content"><i class="fab fa-facebook-square"></i></a>
+                                    <a href="#" class="social col-4 h-100 align-items-center d-flex p-0 px-2 w-fit-content"><i class="fab fa-youtube"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="subheader w-100"> 
+                        <div class="container">
+                            <div class="row">
+                                <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-between">
+                                    <li class="nav-item">
+                                        <a class="nav-link py-3" href="#">Главная</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link py-3" href="#">Продукция</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link py-3" href="#">Галерея</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link py-3" href="#">Блог</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link py-3" href="#">Дилерам</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link py-3" href="#">Прайс</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link py-3" href="#">Контакты</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </nav>
 </header>
