--- a/project/src/pages/components/_footer.html
+++ b/project/src/pages/components/_footer.html
@@ -1,5 +1,64 @@
 <footer>
-    <div class="container">
-        
+    <div class="main">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2 logo w-fit-content">
+                    <img src="./../img/header-logo.svg" alt="" class="img-fluid m-3">
+                </div>
+                <div class="col-md-4 d-flex flex-column justify-content-center my-3">
+                    <span>
+                        Композитная стеклопластиковая <br>
+                        арматура от завода производителя
+                    </span>
+                </div>
+            </div>
+            <div class="row py-2 mt-3">
+                <div class="col-lg-5 col-12">
+                    <div class="nav-links d-flex justify-content-between justify-content-lg-evenly justify-content-md-evenly flex-wrap ">
+                        <a href="#" class="img-fluid px-3 py-1">Главная</a>
+                        <a href="#" class="img-fluid px-3 py-1">Продукция</a>
+                        <a href="#" class="img-fluid px-3 py-1">Галерея</a>
+                        <a href="#" class="img-fluid px-3 py-1">Блог</a>
+                        <a href="#" class="img-fluid px-3 py-1">Дилерам</a>
+                        <a href="#" class="img-fluid px-3 py-1">Прайс</a>
+                        <a href="#" class="img-fluid px-3 py-1">Контакты</a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12 socials d-flex">
+                    <a href="#" class="social col-4 align-items-center d-flex p-0 px-2 w-fit-content"><i
+                            class="far fa-envelope p-3"></i></a>
+                    <a href="#" class="social col-4 align-items-center d-flex p-0 px-2 w-fit-content"><i
+                            class="fab fa-facebook-square p-3"></i></a>
+                    <a href="#" class="social col-4 align-items-center d-flex p-0 px-2 w-fit-content"><i
+                            class="fab fa-youtube p-3"></i></a>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12 contacts d-flex flex-column">
+                    <div class="row">
+                        <div class="col-3"><span>Днепр:</span></div>
+                        <div class="col-9 d-flex flex-column">
+                            <a href="tel:+380673120978">+38 (067) 312 09 78</a>
+                            <a href="tel:+380504827172">+38 (050) 482 71 72</a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-3"><span>Киев:</span></div>
+                        <div class="col-9"><a href="tel:+380637426466">+38 (063) 742 64 66</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+    
+    <div class="subfooter">
+        <div class="container">
+            <div class="row py-3">
+                <div class="col-12 d-flex justify-content-center align-items-center">
+                    <span>Сайт разработан</span>
+                    <a href="#" target="_blank"><img src="./../img/digitallab-logo-white.svg" alt="" class="mx-3 img-fluid"></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 </footer>
