--- a/project/src/styles/_variables.scss
+++ b/project/src/styles/_variables.scss
@@ -1,6 +1,7 @@
 $main-red : #C62929; 
 $main-black : #323232;
 $main-gray : #323232;
+$light-gray : #F0F0F0;
 $grid-breakpoints: (
   xs: 0,
   sm: 576px,
