--- a/project/src/pages/components/_header.html
+++ b/project/src/pages/components/_header.html
@@ -44,25 +44,25 @@
                     <div class="row">
                         <ul class="navbar-nav me-auto mb-2 ml-2 mb-lg-0 d-flex justify-content-between">
                             <li class="nav-item">
-                                <a class="nav-link py-3" href="#">Главная</a>
+                                <a class="nav-link py-3" href="/">Главная</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link py-3" href="#">Продукция</a>
+                                <a class="nav-link py-3" href="/production">Продукция</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link py-3" href="#">Галерея</a>
+                                <a class="nav-link py-3" href="/galery">Галерея</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link py-3" href="#">Блог</a>
+                                <a class="nav-link py-3" href="/blog-list">Блог</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link py-3" href="#">Дилерам</a>
+                                <a class="nav-link py-3" href="/dilers">Дилерам</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link py-3" href="#">Прайс</a>
+                                <a class="nav-link py-3" href="/price">Прайс</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link py-3" href="#">Контакты</a>
+                                <a class="nav-link py-3" href="/contacts">Контакты</a>
                             </li>
                             <li class="d-lg-none socials">
                                 <div class="row h-100 align-items-center socials align-self-center flex-column">
