--- a/project/src/styles/_variables.scss
+++ b/project/src/styles/_variables.scss
@@ -2,6 +2,9 @@ $main-red : #C62929;
 $main-black : #323232;
 $main-gray : #323232;
 $light-gray : #F0F0F0;
+$breadcrums-bg :#EBEBEB;
+$breadcrums :#747474;
+
 $grid-breakpoints: (
   xs: 0,
   sm: 576px,
