--- a/project/src/styles/index-style.scss
+++ b/project/src/styles/index-style.scss
@@ -114,14 +114,7 @@
         transform: translateY(5px);
         display: flex;
     }
-    h1
-    {
-        font-weight: 700;
-        font-size: 40px;
-        @media screen and (max-width :576px) {
-            font-size: 36px;
-        }
-    }
+    
     h2
     {
         font-size: 24px;
@@ -209,4 +202,86 @@
         }
     }
     
+}
+
+#benefits,
+#benefits-2
+{
+
+    .card
+    {
+        padding: 0 20px;
+        border: none;
+        .card-title
+        {
+            h2
+            {
+                font-size: 24px;
+                font-weight: 700;
+            }
+            &-red
+            {
+                background: $main-red;
+                color: #fff;
+            }
+            &-label
+            {
+                padding: 18px 20px;
+                border-radius: 10px;
+            }
+            &-shadow
+            {
+                color: $main-red;
+                box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.15);
+            }
+        }
+        p
+        {
+            padding: 20px 0 10px 0;
+            font-size: 18px;
+            font-weight: 400;
+            &.mr
+            {
+                padding-right: 30px;
+            }
+        }
+    }
+}
+
+#join-us
+{
+    .section-header-block
+    {
+        .col-6
+        {
+            padding: 60px 40px;
+            h1
+            {
+                font-size: 40px;
+                font-weight: 700;
+                @media screen and (max-width :576px) 
+                {
+                    font-size: 28px;
+                }
+            }
+            p
+            {
+                font-weight: 700;
+                padding: 20px 0;
+                font-size: 24px;
+            }
+        }
+        background: no-repeat url('./../img/join-us.svg');
+        background-size: cover;
+        border-radius: 15px;
+    }
+}
+
+#watch-video
+{
+    iframe
+    {
+        border-radius: 30px;
+        overflow: hidden;
+    }
 }
