--- a/project/src/pages/components/_blog.html
+++ b/project/src/pages/components/_blog.html
@@ -4,7 +4,7 @@
             <div class="col-md-6 col-12">
                 <h1 class="section-header">Наш блог</h1>
             </div>
-            <div class="col-md-6 col-12 controls d-flex align-items-end justify-content-end">
+            <div class="col-md-6 col-12 controls d-flex align-items-end justify-content-md-end justify-content-between">
                 <button type="button" id="slider-left-btn" class="slick-next"><i class="fas fa-arrow-left"></i></button>
                 <a href="/blog-list">&nbsp;Смотреть все&nbsp;</a>
                 <button type="button" id="slider-right-btn" class="slick-next"><i class="fas fa-arrow-right"></i></button>
