--- a/project/src/pages/components/_contuct-us-big.html
+++ b/project/src/pages/components/_contuct-us-big.html
@@ -1,11 +1,11 @@
 <section id="contuct-us-big">
     <div class="container">
         <div class="row">
-            <h1 class="container-header">Заполните форму <br>
+            <h1 class="container-header section-header">Заполните форму <br>
             и мы свяжемся с Вами</h1>
         </div>
         <div class="row my-5">
-            <form action="" method="post">
+            <form action="" method="post" class="double-shadow-red">
                 <div class="row">
                     <div class="row col-md-6 col-12">
                         <div class="col-12">
