--- a/project/src/pages/components/_global-scripts.html
+++ b/project/src/pages/components/_global-scripts.html
@@ -8,4 +8,6 @@
         integrity="sha512-pHVGpX7F/27yZ0ISY+VVjyULApbDlD0/X0rgGbTqCE7WFW5MezNTWG/dnhtbBuICzsd0WQPgpE4REBLv+UqChw=="
         crossorigin="anonymous"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="./../scripts/main.js"></script>
 <script src="./../scripts/slick-slider.js"></script>
+
