--- a/project/src/pages/components/_header.html
+++ b/project/src/pages/components/_header.html
@@ -46,9 +46,26 @@
                             <li class="nav-item">
                                 <a class="nav-link py-3" href="/">Главная</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link py-3" href="/production">Продукция</a>
+                            <li class="nav-item dropdown ">
+                                <a class="nav-link dropdown-toggle py-3 d-flex align-items-center px-1" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    Продукция
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item nav-link" href="/reinforcement">Композитная <br>
+                                    стеклопластиковая <br>
+                                    арматура</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item nav-link" href="/grid">Композитная <br>
+                                    стеклопластиковая <br>
+                                    сетка</a></li>
+                                </ul>
                             </li>
+                            <!-- <li class="nav-item">
+                                <a class="nav-link py-3" href="/production">Продукция</a>
+                            </li> -->
                             <li class="nav-item">
                                 <a class="nav-link py-3" href="/galery">Галерея</a>
                             </li>
