--- a/project/src/styles/style.scss
+++ b/project/src/styles/style.scss
@@ -33,6 +33,20 @@ a
         background: $main-red;
     }
 }
+.modal
+{
+    // filter: blur();
+}
+.modal-content
+{
+    background: transparent;
+    border: none;
+    form
+    {
+        background: #fff !important;
+        border-radius: 15px;
+    }
+}
 header
 {
     .phones
@@ -111,6 +125,21 @@ header
                 }
             }
             
+        }
+        .dropdown-menu
+        {
+            .nav-link
+            {
+                color: $main-black !important;
+                font-size: 24px;
+            }
+            hr
+            {
+                background: $main-red;
+                height: 2px;
+                opacity: 1;
+                margin: 0 10px;
+            }
         }
     }
 }
@@ -317,13 +346,23 @@ footer
         }
     }
 }
-
+.double-shadow-red
+{
+    box-shadow: -15px -15px $main-red, 2px 5px rgba(0, 0, 0, 0.15);
+}
+.double-shadow-red-hide
+{
+@media screen and ( max-width : 576px)
+        {
+       box-shadow: none;
+    }
+}
 #contuct-us-big
 {
     form
     {
         border-radius: 15px;
-        box-shadow: -15px -15px $main-red, 2px 5px rgba(0, 0, 0, 0.15);
+        color: #fff;
         padding: 20px 20px 20px 0;
         @media screen and (max-width : 576px) 
         {
@@ -372,3 +411,4 @@ footer
     
 
 }
+
