--- a/project/src/pages/components/_modal.html
+++ b/project/src/pages/components/_modal.html
@@ -8,10 +8,10 @@
                             <div class="row">
                                 <div class="row">
                                     <div class="col-11">
-                                        <h1 class="container-header section-header">Заполните форму <br>
+                                        <h1 class="container-header">Заполните форму <br>
                                             и мы свяжемся с Вами</h1>
                                     </div>
-                                    <div class="col-1">
+                                    <div class="col-1 d-flex p-0 justify-content-end">
                                         <button type="button" class="btn-close" data-bs-dismiss="modal"
                                             aria-label="Close"></button>
                                     </div>
@@ -23,7 +23,7 @@
                                     </div>
                                     <div class="col-12">
                                         <label for="parent" class="form-label mx-4">Номер телефона</label>
-                                        <input id="masked-phone-input" type="tel" class="form-control"
+                                        <input type="tel" class="form-control"
                                             data-mask="+38 000-000-0000" placeholder="+38 000-000-0000">
                                     </div>
                                     <div class="col-12">
@@ -35,7 +35,7 @@
                                     class="col-md-6 col-12 my-4 d-flex justify-content-center align-items-center flex-column">
                                     <div class="d-flex flex-column align-items-end textarea w-100">
                                         <textarea class="w-100" name="message" id="" cols="30" rows="10" placeholder="Напишите нам и мы ответим на все 
-                ваши вопросы"></textarea>
+ваши вопросы"></textarea>
                                         <button type="submit" class="red-btn">Отправить</button>
                                     </div>
                                 </div>
